--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "discord.js": "^11.3.0",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
-    "vk-io": "^4.0.0-alpha.11",
-    "vk-io-plus": "^3.0.3",
-    "vk-node-sdk": "^0.1.8"
+    "request": "^2.83.0",
+    "request-promise-native": "^1.0.5"
   }
 }
