--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "cross-env VK_CON=d37361d7 DISCORD_TOKEN=NDE0OTM4Mjg3NzI0MTY3MTY4.Di6qjA.LrtTV1WmCk5F712tcusWR-dXV2c node server.js"
+    "start": "node server.js"
   },
   "author": "sawich",
   "license": "ISC",
