--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5",
     "cross-env": "^5.2.0"
-  }
+  },
+  "devDependencies": {}
 }
