--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "cross-env DISCORD_TOKEN=NDE0OTM4Mjg3NzI0MTY3MTY4.Di7crg.lPhXWV7iR1vrDpSx1L84Ehz17us node server.js"
   },
   "author": "sawich",
   "license": "ISC",
   "dependencies": {
+    "cross-env": "^5.2.0",
     "discord.js": "^11.3.0",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
+    "mongoose": "^5.2.4",
     "request": "^2.83.0",
-    "request-promise-native": "^1.0.5",
-    "cross-env": "^5.2.0"
+    "request-promise-native": "^1.0.5"
   },
   "devDependencies": {}
 }
