--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "cross-env": "^5.2.0",
     "discord.js": "^11.3.0",
     "express": "^4.16.2",
-    "fs": "0.0.1-security",
-    "mongoose": "^5.2.4",
+    "lokijs": "^1.5.5",
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5"
   },
