--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord.js": "^11.3.0",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
+    "moment": "^2.22.2",
     "node-opus": "^0.3.0",
     "ytdl-core": "^0.21.0"
   },
