--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "fs": "0.0.1-security",
     "moment": "^2.22.2",
     "node-opus": "^0.3.0",
-    "ytdl-core": "^0.21.0"
-  },
-  "devDependencies": {
+    "ytdl-core": "^0.21.0",
     "typescript": "^3.1.0-dev.20180717"
   }
 }
