--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
   "dependencies": {
     "@lokidb/fs-storage": "^2.0.0-beta.7",
     "@lokidb/loki": "^2.0.0-beta.7",
-    "@types/body-parser": "^1.17.0",
-    "@types/express": "^4.16.0",
-    "@types/node": "^10.5.2",
     "axios": "^0.18.0",
     "discord.js": "^11.3.0",
     "express": "^4.16.2",
@@ -20,5 +17,10 @@
     "moment": "^2.22.2",
     "typescript": "^3.1.0-dev.20180717",
     "ytdl-core": "^0.21.0"
-  }
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/express": "^4.16.0",
+    "@types/node": "^10.5.2"
+  }  
 }
