--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "moment": "^2.22.2",
     "typescript": "^3.1.0-dev.20180717",
     "ytdl-core": "^0.21.0"
+  },  
+  "engines": {
+    "node": "10.6.0"
   }
 }
