--- a/package.json
+++ b/package.json
@@ -8,19 +8,18 @@
   "author": "sawich",
   "license": "ISC",
   "dependencies": {
-    "@lokidb/fs-storage": "^2.0.0-beta.7",
-    "@lokidb/loki": "^2.0.0-beta.7",
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.0",
+    "@types/mongoose": "^5.2.2",
     "@types/node": "^10.5.2",
     "axios": "^0.18.0",
     "discord.js": "^11.3.0",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
-    "moment": "^2.22.2",
+    "mongoose": "^5.2.5",
     "typescript": "^3.1.0-dev.20180717",
     "ytdl-core": "^0.21.0"
-  },  
+  },
   "engines": {
     "node": "10.6.0"
   }
