--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/mongoose": "^5.2.2",
     "@types/node": "^10.5.2",
     "axios": "^0.18.0",
+    "bitly": "^6.0.8",
     "discord.js": "^11.3.0",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
