--- a/package.json
+++ b/package.json
@@ -8,17 +8,25 @@
   "author": "sawich",
   "license": "ISC",
   "dependencies": {
+    "@types/archiver": "^2.1.2",
     "@types/body-parser": "^1.17.0",
+    "@types/cheerio": "^0.22.8",
     "@types/express": "^4.16.0",
+    "@types/jsdom": "^11.0.6",
     "@types/mongoose": "^5.2.2",
     "@types/node": "^10.5.2",
+    "@types/uuid": "^3.4.3",
+    "archiver": "^2.1.1",
     "axios": "^0.18.0",
     "bitly": "^6.0.8",
+    "cheerio": "^1.0.0-rc.2",
     "discord.js": "^11.3.0",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
+    "jsdom": "^11.12.0",
     "mongoose": "^5.2.5",
     "typescript": "^3.1.0-dev.20180717",
+    "uuid": "^3.3.2",
     "ytdl-core": "^0.21.0"
   },
   "engines": {
