--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "rootDir": "./src/",
     "moduleResolution": "node",
     "allowJs": false,
+    "allowSyntheticDefaultImports": true,
     "types":[
       "node"
     ]
