--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@types/jsdom": "^11.0.6",
     "@types/mongoose": "^5.2.2",
     "@types/node": "^10.5.2",
+    "@types/node-fetch": "^2.1.4",
     "@types/uuid": "^3.4.3",
     "archiver": "^2.1.1",
     "axios": "^0.18.0",
-    "axios-extensions": "^3.0.3",
     "bitly": "^6.0.8",
     "cheerio": "^1.0.0-rc.2",
     "discord.js": "^11.3.0",
@@ -26,6 +26,7 @@
     "fs": "0.0.1-security",
     "jsdom": "^11.12.0",
     "mongoose": "^5.2.5",
+    "node-fetch": "^2.3.0",
     "typescript": "^3.1.0-dev.20180717",
     "uuid": "^3.3.2",
     "ytdl-core": "^0.21.0"
