--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "./build/server.js",
   "scripts": {
-    "start": "tsc && node ./build/server.js"
+    "start": "tsc && node ./build/server.js",
+    "build": "tsc"
   },
   "author": "sawich",
   "license": "ISC",
