--- a/package.json
+++ b/package.json
@@ -11,26 +11,27 @@
   "dependencies": {
     "@types/archiver": "^2.1.2",
     "@types/body-parser": "^1.17.0",
-    "@types/cheerio": "^0.22.8",
+    "@types/cheerio": "^0.22.10",
     "@types/express": "^4.16.0",
-    "@types/jsdom": "^11.0.6",
-    "@types/mongoose": "^5.2.2",
-    "@types/node": "^10.5.2",
+    "@types/jsdom": "^11.12.0",
+    "@types/mongoose": "^5.3.4",
+    "@types/node": "^10.12.12",
     "@types/node-fetch": "^2.1.4",
-    "@types/uuid": "^3.4.3",
+    "@types/uuid": "^3.4.4",
     "archiver": "^2.1.1",
     "axios": "^0.18.0",
     "bitly": "^6.0.8",
     "cheerio": "^1.0.0-rc.2",
-    "discord.js": "^11.3.0",
-    "express": "^4.16.2",
+    "discord.js": "^11.4.2",
+    "express": "^4.16.4",
     "fs": "0.0.1-security",
     "jsdom": "^11.12.0",
-    "mongoose": "^5.2.5",
+    "mongoose": "^5.3.15",
     "node-fetch": "^2.3.0",
-    "typescript": "^3.1.0-dev.20180717",
-    "uuid": "^3.3.2",
-    "ytdl-core": "^0.21.0"
+    "typescript": "^3.2.2",
+    "update": "^0.7.4",
+    "upgrade": "^1.1.0",
+    "uuid": "^3.3.2"
   },
   "engines": {
     "node": "10.6.0"
