--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./build/server.js",
   "scripts": {
     "start": "tsc && node ./build/server.js",
-    "build": "tsc"
+    "build": "tsc -p tsconfig.json"
   },
   "author": "sawich",
   "license": "ISC",
